fix(controller): 修复业务相关接口
